--- a/css/index.css
+++ b/css/index.css
@@ -1,6 +1,24 @@
-html, body, #renderCanvas{
+html, body{
   width:100%;
   height:100%;
   margin:0;
   padding:0;
+}
+body{
+  display:-webkit-flex;
+  display:flex;
+  -webkit-flex-flow:column nowrap;
+  flex-flow:column nowrap;
+  -webkit-justify-content:center;
+  justify-content:center;
+  -webkit-align-content:center;
+  align-content:center;
+  -webkit-align-items:center;
+  align-items:center;
+}
+.viewport{
+  width: 90%;
+  height: 90%;
+  border : 1px solid #000000;
+  overflow: hidden;
 }
